# OJP-Enhanced-Universe

./: .gitignore  Play_OJPEnhanced.bat
.github/workflows/: build.yml
ojpenhanced/ui/jamp/: Ingame_Crosshair.menu  controls.menu  createserver.menu  demo.menu  ingame.menu  ingame_about.menu  ingame_addbot.menu  ingame_callvote.menu  ingame_controls.menu  ingame_join.menu  ingame_leave.menu  ingame_music.menu  ingame_optimize.menu  ingame_orders.menu  ingame_player.menu  ingame_player2.menu  ingame_playerabilities.menu  ingame_playerforce1.menu  ingame_playerforce2.menu  ingame_playergadgets1.menu  ingame_playergadgets2.menu  ingame_playergunnery1.menu  ingame_playergunnery2.menu  ingame_playergunnery3.menu  ingame_playervehicles.menu  ingame_saber.menu  ingame_setup.menu  ingame_siegeobjectives.menu  ingame_view.menu  ingame_voicechat.menu  ingame_vote.menu  joinserver.menu  main.menu  menudef.h  multiplayer.menu  player.menu  player2.menu  quit.menu  saber.menu  setup.menu  (+1 more)
source/: CMakeLists.txt  OJP Enhanced.sln  OJP Enhanced_VS2003.sln  OJP Enhanced_VS2010.sln  clang_build.sh  clang_install.sh
source/cgame/: CMakeLists.txt  JK2_cgame.vcproj  JK2_cgame.vcxproj  JK2_cgame_vs2012.vcxproj  cg_camera.c  cg_camera.h  cg_consolecmds.c  cg_draw.c  cg_ents.c  cg_event.c  cg_local.h  cg_localents.c  cg_main.c  cg_newDraw.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_saga.c  cg_scoreboard.c  cg_servercmds.c  cg_strap.c  cg_syscalls.c  cg_turret.c  cg_view.c  cg_weaponinit.c  cg_weapons.c  fx_blaster.c  fx_bowcaster.c  fx_bryarpistol.c  fx_demp2.c  fx_disruptor.c  fx_flechette.c  fx_force.c  fx_heavyrepeater.c  fx_local.h  holocronicons.h  tr_types.h
source/cmake/: linux-x86.cmake
source/game/: AnimalNPC.c  CMakeLists.txt  FighterNPC.c  JK2_game.vcproj  JK2_game.vcxproj  JK2_game_vs2012.vcxproj  NPC.c  NPC_AI_AssassinDroid.c  NPC_AI_Default.c  NPC_AI_Droid.c  NPC_AI_GalakMech.c  NPC_AI_Grenadier.c  NPC_AI_Jedi.c  NPC_AI_Mark1.c  NPC_AI_Mark2.c  NPC_AI_Remote.c  NPC_AI_Seeker.c  NPC_AI_Sentry.c  NPC_AI_Stormtrooper.c  NPC_AI_Utils.c  NPC_behavior.c  NPC_combat.c  NPC_move.c  NPC_reactions.c  NPC_spawn.c  NPC_stats.c  NPC_utils.c  SpeederNPC.c  WalkerNPC.c  ai.h  ai_aotc.c  ai_hybrid.c  ai_main.c  ai_main.h  ai_tab.c  ai_util.c  ai_wpnav.c  aotctc_holocron.c  b_public.h  bg_g2_utils.c  (+55 more)
source/qcommon/: disablewarnings.h  game_version.h
source/ui/: CMakeLists.txt  ui.vcproj  ui.vcxproj  ui_force.c  ui_force.h  ui_gameinfo.c  ui_local.h  ui_main.c  ui_public.h  ui_saber.c  ui_shared.c  ui_shared.h  ui_syscalls.c  ui_vs2012.vcxproj
